# Convertly_web

./: Cargo.toml
.github/workflows/: rust.yml
src/: cli.rs  main.rs
web/backend/src/main/java/com/convertly/backend/config/: JwtAuthenticationFilter.java  SecurityConfig.java
web/backend/src/main/java/com/convertly/backend/controller/: AuthController.java  ProjectController.java
web/backend/src/main/java/com/convertly/backend/dto/: AuthDtos.java  ProjectDtos.java
web/backend/src/main/java/com/convertly/backend/entity/: Project.java
web/backend/src/main/java/com/convertly/backend/service/: InterpreterService.java  JwtService.java  ProjectService.java
web/backend/src/main/resources/: application.yml
web/backend/src/test/java/com/convertly/backend/: AuthJwtIntegrationTest.java
web/frontend/src/: App.tsx
web/frontend/src/components/: AuthPage.tsx
web/frontend/src/services/: api.ts
web/frontend/src/types/: api.ts
